Removing The Errors
Got it down to basically just a TileEntity error.

And also the items don't seem to be registered for some reason.