@@ -1,6 +1,7 @@
 package com.gmail.rohzek.infiniores.util;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import com.gmail.rohzek.infiniores.blocks.DepletedOre;
@@ -21,7 +22,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> coal_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> coal_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> coal_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> coal_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> coal_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> coal_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> coal_block_chance;
     	
@@ -29,7 +30,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> diamond_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> diamond_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> diamond_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> diamond_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> diamond_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> diamond_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> diamond_block_chance;
     	
@@ -37,7 +38,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> emerald_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> emerald_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> emerald_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> emerald_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> emerald_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> emerald_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> emerald_block_chance;
     	
@@ -45,7 +46,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> gold_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> gold_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> gold_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> gold_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> gold_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> gold_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> gold_block_chance;
     	
@@ -53,7 +54,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> iron_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> iron_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> iron_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> iron_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> iron_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> iron_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> iron_block_chance;
     	
@@ -61,7 +62,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> lapis_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> lapis_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> lapis_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> lapis_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> lapis_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> lapis_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> lapis_block_chance;
     	
@@ -69,7 +70,7 @@ public class ConfigurationManager
     	public final ForgeConfigSpec.ConfigValue<String> redstone_block_spawn;
     	public final ForgeConfigSpec.ConfigValue<List<String>> redstone_block_replacement;
     	public final ForgeConfigSpec.ConfigValue<Boolean> redstone_block_randomized_replacement;
-    	public final ForgeConfigSpec.ConfigValue<Long> redstone_block_life_time;
+    	public final ForgeConfigSpec.ConfigValue<Integer> redstone_block_life_time;
     	public final ForgeConfigSpec.ConfigValue<Boolean> redstone_block_life_time_randomized;
     	public final ForgeConfigSpec.ConfigValue<Integer> redstone_block_chance;
     	
@@ -77,6 +78,7 @@ public class ConfigurationManager
 
         public General(ForgeConfigSpec.Builder builder)
         {
+        	Arrays.asList("");
             builder.push("General");
             
             isDebug = builder
@@ -87,57 +89,57 @@ public class ConfigurationManager
             builder.push("Coal Configurations");
             
             coal_block_spawn = builder.comment("").translation("").define("coal_block_spawn", "minecraft:coal_ore");
-            coal_block_replacement = builder.comment("").translation("").define("coal_block_replacement", new ArrayList<String>(List.of("minecraft:coal_ore")));
+            coal_block_replacement = builder.comment("").translation("").define("coal_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:coal_ore")));
             coal_block_randomized_replacement = builder.comment("").translation("").define("coal_block_randomized_replacement", false);
-            coal_block_life_time = builder.comment("").translation("").define("coal_block_life_time", 20L);
+            coal_block_life_time = builder.comment("").translation("").define("coal_block_life_time", 20);
             coal_block_life_time_randomized = builder.comment("").translation("").define("coal_block_life_time_randomized", false);
             coal_block_chance = builder.comment("").translation("").define("coal_block_chance", 100);
             
             builder.push("Diamond Configuration");
             diamond_block_spawn = builder.comment("").translation("").define("diamond_block_spawn", "minecraft:diamond_ore");
-            diamond_block_replacement = builder.comment("").translation("").define("diamond_block_replacement", new ArrayList<String>(List.of("minecraft:diamond_ore")));
+            diamond_block_replacement = builder.comment("").translation("").define("diamond_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:diamond_ore")));
             diamond_block_randomized_replacement = builder.comment("").translation("diamond_block_randomized_replacement").define("", false);
-            diamond_block_life_time = builder.comment("").translation("").define("diamond_block_life_time", 20L);
+            diamond_block_life_time = builder.comment("").translation("").define("diamond_block_life_time", 20);
             diamond_block_life_time_randomized = builder.comment("").translation("").define("diamond_block_life_time_randomized", false);
             diamond_block_chance = builder.comment("").translation("").define("diamond_block_chance", 100);
             
             builder.push("Emerald Configuration");
             emerald_block_spawn = builder.comment("").translation("").define("emerald_block_spawn", "minecraft:emerald_ore");
-            emerald_block_replacement = builder.comment("").translation("").define("emerald_block_replacement", new ArrayList<String>(List.of("minecraft:emerald_ore")));
+            emerald_block_replacement = builder.comment("").translation("").define("emerald_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:emerald_ore")));
             emerald_block_randomized_replacement = builder.comment("").translation("emerald_block_randomized_replacement").define("", false);
-            emerald_block_life_time = builder.comment("").translation("").define("emerald_block_life_time", 20L);
+            emerald_block_life_time = builder.comment("").translation("").define("emerald_block_life_time", 20);
             emerald_block_life_time_randomized = builder.comment("").translation("").define("emerald_block_life_time_randomized", false);
             emerald_block_chance = builder.comment("").translation("").define("emerald_block_chance", 100);
             
             builder.push("Gold Configuration");
             gold_block_spawn = builder.comment("").translation("").define("gold_block_spawn", "minecraft:gold_ore");
-            gold_block_replacement = builder.comment("").translation("").define("gold_block_replacement", new ArrayList<String>(List.of("minecraft:gold_ore")));
+            gold_block_replacement = builder.comment("").translation("").define("gold_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:gold_ore")));
             gold_block_randomized_replacement = builder.comment("").translation("").define("gold_block_randomized_replacement", false);
-            gold_block_life_time = builder.comment("").translation("").define("gold_block_life_time", 20L);
+            gold_block_life_time = builder.comment("").translation("").define("gold_block_life_time", 20);
             gold_block_life_time_randomized = builder.comment("").translation("").define("gold_block_life_time_randomized", false);
             gold_block_chance = builder.comment("").translation("").define("gold_block_chance", 100);
             
             builder.push("Iron Configuration");
             iron_block_spawn = builder.comment("").translation("").define("iron_block_spawn", "minecraft:iron_ore");
-            iron_block_replacement = builder.comment("").translation("").define("iron_block_replacement", new ArrayList<String>(List.of("minecraft:iron_ore")));
+            iron_block_replacement = builder.comment("").translation("").define("iron_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:iron_ore")));
             iron_block_randomized_replacement = builder.comment("").translation("").define("iron_block_randomized_replacement", false);
-            iron_block_life_time = builder.comment("").translation("").define("iron_block_life_time", 20L);
+            iron_block_life_time = builder.comment("").translation("").define("iron_block_life_time", 20);
             iron_block_life_time_randomized = builder.comment("").translation("").define("iron_block_life_time_randomized", false);
             iron_block_chance = builder.comment("").translation("").define("iron_block_chance", 100);
             
             builder.push("Lapis Configuration");
             lapis_block_spawn = builder.comment("").translation("").define("lapis_block_spawn", "minecraft:lapis_ore");
-            lapis_block_replacement = builder.comment("").translation("").define("lapis_block_replacement", new ArrayList<String>(List.of("minecraft:lapis_ore")));
+            lapis_block_replacement = builder.comment("").translation("").define("lapis_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:lapis_ore")));
             lapis_block_randomized_replacement = builder.comment("").translation("").define("lapis_block_randomized_replacement", false);
-            lapis_block_life_time = builder.comment("").translation("").define("lapis_block_life_time", 20L);
+            lapis_block_life_time = builder.comment("").translation("").define("lapis_block_life_time", 20);
             lapis_block_life_time_randomized = builder.comment("").translation("").define("lapis_block_life_time_randomized", false);
             lapis_block_chance = builder.comment("").translation("").define("lapis_block_chance", 100);
             
             builder.push("Redstone Configuration");
             redstone_block_spawn = builder.comment("").translation("").define("", "minecraft:lit_redstone_ore");
-            redstone_block_replacement = builder.comment("").translation("").define("redstone_block_replacement", new ArrayList<String>(List.of("minecraft:redstone_ore")));
+            redstone_block_replacement = builder.comment("").translation("").define("redstone_block_replacement", new ArrayList<String>(Arrays.asList("minecraft:redstone_ore")));
             redstone_block_randomized_replacement = builder.comment("").translation("").define("", false);
-            redstone_block_life_time = builder.comment("").translation("").define("redstone_block_life_time", 20L);
+            redstone_block_life_time = builder.comment("").translation("").define("redstone_block_life_time", 20);
             redstone_block_life_time_randomized = builder.comment("").translation("").define("", false);
             redstone_block_chance = builder.comment("").translation("").define("redstone_block_chance", 100);
             
